Fix/some issues (#336)
* remove perfect-scrollbar.js, and custom scrolls be css for webkit and firefox

* fix webpack warnings for webp and avif

* thin scrollbars

* fix 5 first reviews
closes #330

* loading reviews indicator

* remove scrollbar from less

* more reviews btn

* edit title of reviews

* default source for review

* fix x scroll visibility

* return appollo url

--- a/assets/less/1_base/layout.less
+++ b/assets/less/1_base/layout.less
@@ -145,6 +145,14 @@ body {
 
   &__more {
     margin: 50px 0 70px;
+
+    &-btn {
+      text-align: center;
+
+      &.is-hidden {
+        display: none;
+      }
+    }
   }
 
   &__form {
